src/components/Navbar.css
.navbar {
  position: fixed;
  top: 0;
  left: 0;
  width: 98%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem;
  transition: background-color 0.3s ease;
  z-index: 1000;
}

.navbar.scrolled {
  background-color: rgba(0, 0, 0, 1);
}

.logo {
  font-size: 1.5rem;
  font-weight: bold;
  color: white;
}

.logo img {
  width: 43px;
  height: auto;
}

.nav-links {
  display: flex;
  gap: 2rem;
}

.navbar button {
  background: none;
  border: none;
  color: white;
  font-size: 1rem;
  cursor: pointer;
  padding: 0.5rem 1rem;
  transition: opacity 0.3s ease;
}

.navbar a:hover {
    opacity: 0.7;
}

.navbar button:hover {
  opacity: 0.7;
}

.contact button {
  border: 1px solid white;
  border-radius: 4px;
}

.hamburger {
  display: none;
  flex-direction: column;
  gap: 6px;
  cursor: pointer;
  z-index: 1001;
}

.hamburger span {
  width: 30px;
  height: 3px;
  background-color: white;
  transition: all 0.3s ease;
}

@media (max-width: 768px) {
  .nav-links {
    gap: 1rem;
  }
  
  .navbar {
    padding: 1rem;
  }
}

@media (max-width: 600px) {
  .hamburger {
    display: flex;
  }

  .nav-links {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background-color: black;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 2rem;
    transform: translateX(-100%);
    transition: transform 0.3s ease;
  }

  .nav-links.mobile-active {
    transform: translateX(0);
  }

  .contact {
    position: fixed;
    bottom: 20%;
    left: 0;
    width: 100%;
    display: flex;
    justify-content: center;
    transform: translateX(-100%);
    transition: transform 0.3s ease;
  }

  .contact.mobile-active {
    transform: translateX(0);
  }

  .navbar {
    width: 93%;
  }

  .logo img {
    width: 40px;
  }
}

